// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableContentSubBlockRenderer Renders editable Markdown block correctly 1`] = `
<div class="editableContent  ">
  <div class="editableButton">
    <div class="editableButtonContent">
      Click to edit this section
    </div>
  </div>
  <div>
    <div classname="govuk-body">
      <p>
        test
      </p>
    </div>
  </div>
</div>
`;

exports[`EditableContentSubBlockRenderer Renders non-editable Markdown block correctly 1`] = `
<div class>
  <div class="editableButton">
    <div class="editableButtonContent">
      Click to edit this section
    </div>
  </div>
  <div>
    <div classname="govuk-body">
      <p>
        test
      </p>
    </div>
  </div>
</div>
`;
